shift card style fixes for mobile

--- a/src/components/shift-background-card/shift-background-card.css
+++ b/src/components/shift-background-card/shift-background-card.css
@@ -55,15 +55,15 @@
 }
 
 .shift-card:hover::after {
-    background-position: 20% 20%;
+    background-position: -20% 0%;
 }
 
 @media screen and (max-width: 768px) {
     .shift-card {
         margin-left: auto;
         margin-right: auto;
-        width: 80%;
-        max-height: 250px;
+        width: 60%;
+        max-height: 350px;
     }
 }
 
